[dyad] (1 files changed)

--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -527,30 +527,35 @@
       background: rgba(0,0,0,0.2);
       border: 1px solid var(--teal-border);
       border-radius: 12px;
-      padding: 1.25rem;
+      padding: 1.5rem;
       animation: fadeIn 0.3s ease;
+      text-align: center;
     }
     .bank-details-box.active { display: block; }
-    .bank-row {
-      display: flex; justify-content: space-between; align-items: center;
-      padding: 0.5rem 0;
-      border-bottom: 1px solid var(--divider);
-    }
-    .bank-row:last-child { border-bottom: none; }
-    .bank-label { font-size: 0.75rem; color: var(--slate); font-weight: 600; text-transform: uppercase; }
-    .bank-val-wrap { display: flex; align-items: center; gap: 8px; }
-    .bank-value { font-size: 0.85rem; color: var(--white); font-family: monospace; }
-    .copy-btn {
-      background: var(--teal-glow);
-      border: 1px solid var(--teal-border);
-      color: var(--teal);
-      padding: 4px 8px;
-      border-radius: 6px;
-      font-size: 0.7rem;
+    
+    .btn-wa-transfer {
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      gap: 10px;
+      width: 100%;
+      background: #25D366;
+      color: white;
+      font-weight: 700;
+      padding: 1rem;
+      border-radius: 12px;
+      text-decoration: none;
+      transition: all 0.3s;
+      box-shadow: 0 4px 15px rgba(37, 211, 102, 0.3);
+      border: none;
+      font-size: 0.95rem;
       cursor: pointer;
-      transition: all 0.2s;
     }
-    .copy-btn:hover { background: var(--teal); color: var(--navy-deep); }
+    .btn-wa-transfer:hover {
+      background: #22c35e;
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(37, 211, 102, 0.4);
+    }
 
     @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
 
@@ -1106,37 +1111,17 @@
 
     <!-- Bank Details for Transfer -->
     <div id="bankDetails" class="bank-details-box">
-      <div class="bank-row">
-        <span class="bank-label">Beneficiário</span>
-        <div class="bank-val-wrap">
-          <span class="bank-value">HEAVENWHISPER, UNIPESSOAL, LDA</span>
-          <button class="copy-btn" onclick="copyText('HEAVENWHISPER, UNIPESSOAL, LDA', this)">Copiar</button>
-        </div>
-      </div>
-      <div class="bank-row">
-        <span class="bank-label">IBAN</span>
-        <div class="bank-val-wrap">
-          <span class="bank-value">LT64 3250 0598 6608 3915</span>
-          <button class="copy-btn" onclick="copyText('LT643250059866083915', this)">Copiar</button>
-        </div>
-      </div>
-      <div class="bank-row">
-        <span class="bank-label">BIC/SWIFT</span>
-        <div class="bank-val-wrap">
-          <span class="bank-value">REVOLT21</span>
-          <button class="copy-btn" onclick="copyText('REVOLT21', this)">Copiar</button>
-        </div>
-      </div>
-      <div class="bank-row">
-        <span class="bank-label">Moeda</span>
-        <span class="bank-value">EUR</span>
-      </div>
-      <p class="text-[10px] text-slate mt-2 text-center">Envie o comprovativo para sales@wekota.eu após a transferência.</p>
+      <p class="text-sm text-slate mb-4">Para garantir a segurança da transação, os dados bancários são fornecidos diretamente pela nossa equipa de suporte.</p>
+      
+      <a href="https://wa.me/34634773958?text=Ol%C3%A1%2C%20gostaria%20de%20solicitar%20os%20dados%20banc%C3%A1rios%20para%20finalizar%20minha%20ades%C3%A3o%20WEKOTA." target="_blank" class="btn-wa-transfer">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.437 5.634 1.437h.005c6.558 0 11.894-5.335 11.897-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
+        Solicite os dados bancarios do Pais corespondente
+      </a>
     </div>
 
     <div class="inline-notice">
       <span class="n-icon">🔒</span>
-      <span>Pagamentos via cartão são processados de forma segura pelo Stripe. Para transferências, a sua vaga é garantida após a recepção do comprovativo.</span>
+      <span>Pagamentos via cartão são processados de forma segura pelo Stripe. Para transferências, a sua vaga é garantida após a validação com a equipa.</span>
     </div>
 
     <button class="btn-primary" id="btn-final-pay">Confirmar adesão</button>
