[dyad] Implementei a versão completa do site em espanhol, incluindo página inicial e funil de conversão traduzidos. Adicionei um seletor de idiomas (bandeiras PT/ES) no header e integrei a lógica de backend para suportar ambos os idiomas de forma nativa e sincronizada com o Admin.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
       <a href="./" class="logo">
         <img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official">
       </a>
-      <a href="./funil-conversao.html" class="btn btn--outline-navy">Entrar na Lista</a>
+      <div class="header__right">
+        <div class="lang-selector">
+          <a href="index.html" class="active" title="Português"><img src="https://flagcdn.com/w20/pt.png" width="20" alt="PT"></a>
+          <a href="es.html" title="Español"><img src="https://flagcdn.com/w20/es.png" width="20" alt="ES"></a>
+        </div>
+        <a href="./funil-conversao.html" class="btn btn--outline-navy">Entrar na Lista</a>
+      </div>
     </div>
   </header>
 
