[dyad] Corrigi o erro de layout na página do funil em espanhol (funil-conversao-es.html). Adicionei as classes CSS necessárias ao style.css, ajustei as proporções do logo e do contêiner, e garanti que a interatividade do upload de documentos (KYC) estivesse funcionando corretamente. O design agora está consistente com a versão em português.

--- a/funil-conversao-es.html
+++ b/funil-conversao-es.html
@@ -26,7 +26,7 @@
         <img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-funnel">
       </a>
       <div class="header-right-funnel">
-        <div class="lang-selector-funnel">
+        <div class="lang-selector">
            <a href="funil-conversao.html" title="Português"><img src="https://flagcdn.com/w20/pt.png" width="20" alt="PT"></a>
            <a href="funil-conversao-es.html" class="active" title="Español"><img src="https://flagcdn.com/w20/es.png" width="20" alt="ES"></a>
         </div>
