[dyad] Removida a palavra "Laranja/Naranja" da comunicação do iPhone 17 Pro Max e ajustado o carrossel de imagens para evitar distorções.

--- a/funil-conversao-es.html
+++ b/funil-conversao-es.html
@@ -964,7 +964,7 @@
         <div class="pc-radio"></div>
         <div class="pc-info">
           <h4>iPhone 17 Pro Max 256GB</h4>
-          <p>Color Naranja — <span class="pc-price">Desde €75/mes</span></p>
+          <p>Disponible en varios colores — <span class="pc-price">Desde €75/mes</span></p>
         </div>
         <div class="pc-badge">Popular</div>
       </div>
