--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -964,7 +964,7 @@
         <div class="pc-radio"></div>
         <div class="pc-info">
           <h4>iPhone 17 Pro Max 256GB</h4>
-          <p>Cor Laranja — <span class="pc-price">Desde €75/mês</span></p>
+          <p>Disponível em várias cores — <span class="pc-price">Desde €75/mês</span></p>
         </div>
         <div class="pc-badge">Popular</div>
       </div>
