--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
     <section class="section-padding bg-white" id="produto">
       <div class="container">
         <div class="text-center mb-60">
-          <h2 class="section-title">iPhone 17 Pro Max 256GB — <span class="text-teal">Laranja</span></h2>
+          <h2 class="section-title">iPhone 17 Pro Max 256GB — <span class="text-teal">Todas as Cores</span></h2>
         </div>
         <div class="product-carousel-wrapper">
           <div class="product-carousel-track">
             <div class="product-slide">
-              <img src="images/product-orange.png" alt="iPhone 17 Pro Max Laranja" class="product-img-premium">
+              <img src="images/product-orange.png" alt="iPhone 17 Pro Max" class="product-img-premium">
             </div>
             <div class="product-slide">
               <img src="images/hero-split.png" alt="iPhone 17 Pro Max Detalhe" class="product-img-premium">
