[dyad] Adicionadas duas novas imagens ao carrossel de produtos no index.html.

--- a/index.html
+++ b/index.html
@@ -140,6 +140,12 @@
               <img src="images/product-orange.png" alt="iPhone 17 Pro Max" class="product-img-premium">
             </div>
             <div class="product-slide">
+              <img src="images/product-info.jpg" alt="iPhone 17 Pro Max Info" class="product-img-premium">
+            </div>
+            <div class="product-slide">
+              <img src="images/product-cable.png" alt="iPhone 17 Pro Max Cable" class="product-img-premium">
+            </div>
+            <div class="product-slide">
               <img src="images/hero-split.png" alt="iPhone 17 Pro Max Detalhe" class="product-img-premium">
             </div>
              <div class="product-slide">
