[dyad] Corrigida a inconsistência numérica de vagas em todo o site para 6 de 12 posições preenchidas.

--- a/index.html
+++ b/index.html
@@ -176,8 +176,8 @@
             <span class="dot-pos filled"></span>
             <span class="dot-pos filled"></span>
             <span class="dot-pos filled"></span>
-            <span class="dot-pos"></span>
-            <span class="dot-pos"></span>
+            <span class="dot-pos filled"></span>
+            <span class="dot-pos filled"></span>
             <span class="dot-pos"></span>
             <span class="dot-pos"></span>
             <span class="dot-pos"></span>
@@ -185,7 +185,7 @@
             <span class="dot-pos"></span>
             <span class="dot-pos"></span>
           </div>
-          <p class="dots-label mt-24">4 de 12 posições confirmadas — 8 restantes</p>
+          <p class="dots-label mt-24">6 de 12 posições confirmadas — 6 restantes</p>
         </div>
 
         <div class="countdown-wrapper mb-60">
