[dyad] wrote 2 file(s)

--- a/es.html
+++ b/es.html
@@ -216,7 +216,7 @@
         <h4 class="footer__title">Enlaces</h4>
         <ul class="footer__links">
           <li><a href="#como-funciona">Cómo funciona</a></li>
-          <li><a href="mailto:sales@wekota.eu">Contacto</a></li>
+          <li><a href="mailto:contato@wekota.eu">Contacto</a></li>
         </ul>
       </div>
       <div class="footer__col">
