--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
         <ul class="footer__links">
           <li><a href="#como-funciona">Como funciona</a></li>
           <li><a href="#reservar">Lista prioritária</a></li>
-          <li><a href="mailto:sales@wekota.eu">Contato</a></li>
+          <li><a href="mailto:contato@wekota.eu">Contato</a></li>
           <li><a href="tel:+34671941267" style="color: var(--white-60); font-size: 0.9rem; display: flex; align-items: center; gap: 8px; margin-top: 12px; text-decoration: none;">
             <img src="https://flagcdn.com/w20/es.png" srcset="https://flagcdn.com/w40/es.png 2x" width="20" alt="Espanha">
             +34 671 94 12 67
