[dyad] Atualizada a FAQ 5 para linkar documentos legais e corrigida a inconsistência de vagas na página espanhola.

--- a/es.html
+++ b/es.html
@@ -133,10 +133,20 @@
         <p class="section-desc text-white-60 mb-48 mx-auto" style="line-height: 1.8;">El grupo se abrirá solo cuando los primeros <strong>12 participantes calificados</strong> confirmen su posición.</p>
         <div class="positions-status mb-60">
           <div class="dots-row">
-            <span class="dot-pos filled"></span><span class="dot-pos filled"></span><span class="dot-pos filled"></span><span class="dot-pos filled"></span>
-            <span class="dot-pos"></span><span class="dot-pos"></span><span class="dot-pos"></span><span class="dot-pos"></span><span class="dot-pos"></span><span class="dot-pos"></span><span class="dot-pos"></span><span class="dot-pos"></span>
+            <span class="dot-pos filled"></span>
+            <span class="dot-pos filled"></span>
+            <span class="dot-pos filled"></span>
+            <span class="dot-pos filled"></span>
+            <span class="dot-pos filled"></span>
+            <span class="dot-pos filled"></span>
+            <span class="dot-pos"></span>
+            <span class="dot-pos"></span>
+            <span class="dot-pos"></span>
+            <span class="dot-pos"></span>
+            <span class="dot-pos"></span>
+            <span class="dot-pos"></span>
           </div>
-          <p class="dots-label mt-24">4 de 12 posiciones confirmadas — 8 restantes</p>
+          <p class="dots-label mt-24">6 de 12 posiciones confirmadas — 6 restantes</p>
         </div>
         <div class="countdown-wrapper mb-60">
           <p class="countdown-header mb-16"><i data-lucide="clock" class="icon-sm"></i> LA VENTANA DE INSCRIPCIÓN CIERRA EN</p>
