--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
               <i data-lucide="chevron-down" class="faq-icon"></i>
             </button>
             <div class="faq-answer">
-              <p>A WEKOTA opera como uma empresa com sede na Europa e cumpre as regulamentações da UE aplicáveis a plataformas comerciais coletivas. Não somos um banco nem uma instituição de pagamento. A documentação legal completa está disponível mediante pedido.</p>
+              <p>A WEKOTA opera como uma empresa com sede na Europa e cumpre as regulamentações da UE aplicáveis a plataformas comerciais coletivas. Pode consultar a nossa <a href="politica-privacidade.html" class="text-teal">Política de Privacidade</a> e os nossos <a href="termos-condicoes.html" class="text-teal">Termos e Condições</a> completos para total transparência.</p>
             </div>
           </div>
 
