[dyad] Atualizados os testemunhos para remover referências a Berlim/Alemanha, substituindo-as por Madrid/Espanha para manter a consistência com as áreas de operação da WEKOTA.

--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
                 <div class="rating-stars mb-24">
                   <i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i>
                 </div>
-                <p class="testimonial-text">"As lojas tradicionais queriam uma pontuação de crédito alemã que simplesmente ainda não tinha. Com a WEKOTA entrei num grupo, assinei um contrato que realmente compreendi e soube exatamente quando receberia o meu dispositivo. Zero surpresas."</p>
+                <p class="testimonial-text">"As lojas tradicionais queriam uma pontuação de crédito que eu simplesmente ainda não tinha em Espanha. Com a WEKOTA entrei num grupo, assinei um contrato que realmente compreendi e soube exatamente quando receberia o meu dispositivo. Zero surpresas."</p>
                 <div class="testimonial-author">
                   <div class="author-avatar">KA</div>
                   <div class="author-info">
                     <h4>Kwame A.</h4>
-                    <p>Gana ➔ Berlim, Alemanha</p>
+                    <p>Gana ➔ Madrid, Espanha</p>
                     <span class="author-subtext">Engenheiro de Software, 2 anos na Europa</span>
                   </div>
                 </div>
