[dyad] Removida a referência ao WhatsApp nos CTAs do site que agora direcionam para o funil de conversão.

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
         </a>
         
         <p class="disclaimer-text text-white-60">
-          Ao clicar, será conectado a um consultor WEKOTA via WhatsApp. <br>
+          Inicie agora a sua reserva de posição. <br>
           Sem compromisso nesta fase.
         </p>
       </div>
