--- a/es.html
+++ b/es.html
@@ -227,6 +227,10 @@
         <ul class="footer__links">
           <li><a href="#como-funciona">Cómo funciona</a></li>
           <li><a href="mailto:contato@wekota.eu">Contacto</a></li>
+          <li><a href="tel:+34634773958" style="color: var(--white-60); font-size: 0.9rem; display: flex; align-items: center; gap: 8px; margin-top: 12px; text-decoration: none;">
+            <img src="https://flagcdn.com/w20/es.png" srcset="https://flagcdn.com/w40/es.png 2x" width="20" alt="España">
+            +34 634 77 39 58
+          </a></li>
         </ul>
       </div>
       <div class="footer__col">
