--- a/admin.html
+++ b/admin.html
@@ -21,31 +21,8 @@
 </head>
 <body>
     <div id="app" class="min-h-screen relative">
-        <!-- Login Screen -->
-        <div id="login-screen" class="flex items-center justify-center min-h-screen bg-slate-900">
-            <div class="glass p-8 rounded-2xl w-full max-w-md relative z-10 shadow-2xl">
-                <div class="text-center mb-8">
-                    <img src="images/logo-oficial.png" alt="WEKOTA" class="h-16 mx-auto mb-4 brightness-0 invert">
-                    <h1 class="text-2xl font-bold text-teal-400">Admin Access</h1>
-                </div>
-                <!-- Alterado para evitar submit padrão do HTML -->
-                <div class="space-y-4">
-                    <div>
-                        <label class="text-xs text-slate-400 uppercase font-bold tracking-wider mb-1 block">Email</label>
-                        <input type="email" id="email" class="w-full bg-slate-900/80 border border-slate-700 rounded-lg p-3 outline-none focus:border-teal-500 text-white transition-colors" placeholder="admin@wekota.eu" required>
-                    </div>
-                    <div>
-                        <label class="text-xs text-slate-400 uppercase font-bold tracking-wider mb-1 block">Password</label>
-                        <input type="password" id="password" class="w-full bg-slate-900/80 border border-slate-700 rounded-lg p-3 outline-none focus:border-teal-500 text-white transition-colors" placeholder="••••••••" required>
-                    </div>
-                    <button id="login-btn-manual" class="w-full bg-teal-500 text-slate-900 font-bold p-3 rounded-lg hover:bg-teal-400 transition-all shadow-lg shadow-teal-500/20 mt-4">ENTRAR NO SISTEMA</button>
-                    <p id="login-error-msg" class="text-red-400 text-xs text-center hidden">Credenciais incorretas.</p>
-                </div>
-            </div>
-        </div>
-
         <!-- Dashboard Content -->
-        <div id="admin-content" class="hidden pb-20">
+        <div id="admin-content" class="pb-20">
             <!-- Navbar -->
             <nav class="glass border-b border-white/10 sticky top-0 z-40">
                 <div class="container mx-auto px-6 h-16 flex justify-between items-center">
