--- a/funil-conversao-es.html
+++ b/funil-conversao-es.html
@@ -1085,43 +1085,25 @@
 
   <!-- ============================================ -->
   <!-- STEP 5: PAGAMENTO -->
-  <!-- ============================================ -->
   <div class="screen" id="screen-step5">
     <div class="screen-title">Configura el pago</div>
-    <div class="screen-sub">Elige cómo quieres pagar las cuotas mensuales. <strong>La primera cuota se cobra cuando el grupo inicie.</strong></div>
+    <div class="screen-sub">Configura tu tarjeta para las cuotas mensuales. <strong>La primera cuota se cobra cuando el grupo inicie.</strong></div>
 
     <label class="form-label">Método de pago</label>
     <div class="pay-methods">
-      <div class="pay-method selected" onclick="selectPay(this, 'card')">
+      <div class="pay-method selected">
         <div class="pay-icon">💳</div>
         <div class="pay-info">
           <h4>Tarjeta de débito/crédito</h4>
           <p>Visa o Mastercard. Cobro automático mensual.</p>
         </div>
-        <span class="pay-rec">Recomendado</span>
+        <span class="pay-rec">Seguro</span>
       </div>
-      <div class="pay-method" onclick="selectPay(this, 'transfer')">
-        <div class="pay-icon">🌍</div>
-        <div class="pay-info">
-          <h4>Transferencia internacional</h4>
-          <p>Wise, Revolut o transferencia SEPA manual.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- Bank Details for Transfer -->
-    <div id="bankDetails" class="bank-details-box">
-      <p class="text-sm text-slate mb-4">Para garantizar la seguridad de la transacción, los datos bancarios son proporcionados directamente por nuestro equipo de soporte.</p>
-      
-      <a href="https://wa.me/34634773958?text=Hola%2C%20quisiera%20solicitar%20los%20datos%20bancarios%20para%20finalizar%20mi%20adhesi%C3%B3n%20WEKOTA." target="_blank" class="btn-wa-transfer">
-        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.437 5.634 1.437h.005c6.558 0 11.894-5.335 11.897-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
-        Solicite los datos bancarios del país correspondiente
-      </a>
     </div>
 
     <div class="inline-notice">
       <span class="n-icon">🔒</span>
-      <span>Los pagos vía tarjeta son procesados de forma segura por Stripe. Para transferencias, tu plaza está garantizada después de la validación con el equipo.</span>
+      <span>Los pagos son procesados de forma segura por Stripe. Tu plaza está garantizada tras la confirmación del método de pago.</span>
     </div>
 
     <button class="btn-primary" id="btn-final-pay">Confirmar adhesión</button>
@@ -1196,15 +1178,7 @@
     el.classList.add('selected');
   };
   window.selectPay = function(el, type) {
-    document.querySelectorAll('.pay-method').forEach(c => c.classList.remove('selected'));
-    el.classList.add('selected');
-    
-    const bankDetails = document.getElementById('bankDetails');
-    if (type === 'transfer') {
-      bankDetails.classList.add('active');
-    } else {
-      bankDetails.classList.remove('active');
-    }
+    // Función desactivada
   };
   window.copyText = function(text, btn) {
     navigator.clipboard.writeText(text).then(() => {
