[dyad] Adding alternative payment option notice with WhatsApp link. - wrote 2 file(s)

--- a/funil-conversao-es.html
+++ b/funil-conversao-es.html
@@ -1101,6 +1101,13 @@
       </div>
     </div>
 
+    <div class="mt-1 text-center">
+      <p class="text-sm text-slate">
+        Para otras formas de pago (ej: transferencia o depósito mensual) 
+        <a href="https://wa.me/34634773958?text=Hola%2C%20me%20gustaría%20saber%20más%20sobre%20otras%20formas%20de%20pago." target="_blank" class="text-teal font-bold decoration-none hover:underline">hable com nuestro equipo</a>
+      </p>
+    </div>
+
     <div class="inline-notice">
       <span class="n-icon">🔒</span>
       <span>Los pagos son procesados de forma segura por Stripe. Tu plaza está garantizada tras la confirmación del método de pago.</span>
