--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -1101,6 +1101,13 @@
       </div>
     </div>
 
+    <div class="mt-1 text-center">
+      <p class="text-sm text-slate">
+        Para outras formas de pagamento (ex: transferência ou deposito mensal) 
+        <a href="https://wa.me/34634773958?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20outras%20formas%20de%20pagamento." target="_blank" class="text-teal font-bold decoration-none hover:underline">fale com nosso time</a>
+      </p>
+    </div>
+
     <div class="inline-notice">
       <span class="n-icon">🔒</span>
       <span>Pagamentos são processados de forma segura pelo Stripe. A sua vaga é garantida após a confirmação do método de pagamento.</span>
