[dyad] Standardizing payment method card designs. - wrote 2 file(s)

--- a/funil-conversao.html
+++ b/funil-conversao.html
@@ -1099,6 +1099,14 @@
         </div>
         <span class="pay-rec">Seguro</span>
       </div>
+
+      <a href="https://wa.me/34634773958?text=Olá%2C%20gostaria%20de%20saber%20mais%20sobre%20outras%20formas%20de%20pagamento." target="_blank" class="pay-method" style="text-decoration: none;">
+        <div class="pay-icon">💬</div>
+        <div class="pay-info">
+          <h4>Outras formas de pagamento</h4>
+          <p>Transferência ou depósito mensal. Fale com nosso time.</p>
+        </div>
+      </a>
     </div>
 
     <div class="mt-1 text-center">
