[dyad] Iniciando análise para corrigir erro de carregamento de estilos e imagens. - wrote 4 file(s)

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header class="header">
       <div class="container header__inner">
         <a href="/" class="logo">
-          <img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official">
+          <img src="/images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official">
         </a>
         <div class="header__right">
           <div class="lang-selector">
@@ -54,7 +54,7 @@
             <a href="funil-conversao.html" class="btn btn--primary btn--lg">Quero minha posição</a>
           </div>
           <div class="hero__visual">
-            <img src="images/hero-split.png" alt="iPhone 17 Pro Max" class="hero__img">
+            <img src="/images/hero-split.png" alt="iPhone 17 Pro Max" class="hero__img">
           </div>
         </div>
       </section>
@@ -94,11 +94,11 @@
           <div class="text-center mb-60"><h2 class="section-title">iPhone 17 Pro Max 256GB — <span class="text-teal">Todas as Cores</span></h2></div>
           <div class="product-carousel-wrapper">
             <div class="product-carousel-track">
-              <div class="product-slide"><img src="images/product-orange.png" alt="iPhone 17 Pro Max" class="product-img-premium"></div>
-              <div class="product-slide"><img src="images/product-info.jpg" alt="iPhone 17 Pro Max Info" class="product-img-premium"></div>
-              <div class="product-slide"><img src="images/product-cable.png" alt="iPhone 17 Pro Max Cable" class="product-img-premium"></div>
-              <div class="product-slide"><img src="images/hero-split.png" alt="iPhone 17 Pro Max Detalhe" class="product-img-premium"></div>
-              <div class="product-slide"><img src="images/lineup.png" alt="iPhone 17 Pro Max Lineup" class="product-img-premium"></div>
+              <div class="product-slide"><img src="/images/product-orange.png" alt="iPhone 17 Pro Max" class="product-img-premium"></div>
+              <div class="product-slide"><img src="/images/product-info.jpg" alt="iPhone 17 Pro Max Info" class="product-img-premium"></div>
+              <div class="product-slide"><img src="/images/product-cable.png" alt="iPhone 17 Pro Max Cable" class="product-img-premium"></div>
+              <div class="product-slide"><img src="/images/hero-split.png" alt="iPhone 17 Pro Max Detalhe" class="product-img-premium"></div>
+              <div class="product-slide"><img src="/images/lineup.png" alt="iPhone 17 Pro Max Lineup" class="product-img-premium"></div>
             </div>
             <div class="carousel-nav">
               <button class="nav-btn prev"><i data-lucide="chevron-left"></i></button>
@@ -108,7 +108,7 @@
         </div>
       </section>
 
-      <section class="urgency-banner section-padding" style="background: linear-gradient(rgba(22, 62, 99, 0.95), rgba(22, 62, 99, 0.95)), url('images/hero-split.png') center/cover fixed;">
+      <section class="urgency-banner section-padding" style="background: linear-gradient(rgba(22, 62, 99, 0.95), rgba(22, 62, 99, 0.95)), url('/images/hero-split.png') center/cover fixed;">
         <div class="container text-center text-white">
           <div class="status-badge-premium mb-32"><span class="status-dot-pulse"></span> INSCRIÇÕES ABERTAS PARA O GRUPO</div>
           <h2 class="urgency-title mb-32">Posições limitadas <br> <span class="text-teal">disponíveis.</span></h2>
@@ -166,7 +166,7 @@
 
       <footer class="footer bg-navy">
         <div class="container footer__grid">
-          <div class="footer__col"><a href="#" class="logo mb-24"><img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official brightness-invert"></a><p class="footer__desc">Plataforma europeia estruturada de aquisição coletiva.</p></div>
+          <div class="footer__col"><a href="#" class="logo mb-24"><img src="/images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official brightness-invert"></a><p class="footer__desc">Plataforma europeia estruturada de aquisição coletiva.</p></div>
           <div class="footer__col"><h4 class="footer__title">Links</h4><ul class="footer__links"><li><a href="#como-funciona">Como funciona</a></li><li><a href="mailto:contato@wekota.eu">Contato</a></li></ul></div>
           <div class="footer__col"><h4 class="footer__title">Legal</h4><ul class="footer__links"><li><a href="politica-privacidade.html">Política de Privacidade</a></li><li><a href="termos-condicoes.html">Termos e Condições</a></li></ul><p class="footer__copyright">© 2026 WEKOTA. Todos os direitos reservados.</p></div>
         </div>
