--- a/es.html
+++ b/es.html
@@ -214,45 +214,99 @@
         </div>
       </div>
     </section>
+
+    <!-- SECCIÓN DE MÉTRICAS & PRUEBA SOCIAL (Restaurada) -->
+    <section class="section-padding bg-white">
+      <div class="container">
+        <div class="metrics-grid">
+          <div class="metric-item-premium"><span class="metric-value">12</span><span class="metric-label">Puestos por Grupo</span></div>
+          <div class="metric-item-premium"><span class="metric-value">0%</span><span class="metric-label">Tasa de Interés</span></div>
+          <div class="metric-item-premium"><span class="metric-value">100%</span><span class="metric-label">Garantía Contractual</span></div>
+        </div>
+
+        <div class="text-center mb-60">
+          <h2 class="section-title">Lo que dicen nuestros miembros</h2>
+        </div>
+        <div class="carousel-container-testimonials">
+          <div class="testimonial-track">
+            <div class="testimonial-slide">
+              <div class="testimonial-card-premium">
+                <div class="rating-stars"><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i><i data-lucide="star" class="star-icon"></i></div>
+                <p class="testimonial-text">"La transparencia del proceso me sorprendió. Recibí mi iPhone exactamente en el mes previsto en el contrato europeo."</p>
+                <div class="testimonial-author">
+                  <div class="author-avatar">RD</div>
+                  <div class="author-info"><h4>Ricardo D.</h4><p>Madrid, ES</p></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SECCIÓN FAQ (Restaurada) -->
+    <section class="section-padding bg-light" id="faq">
+      <div class="container">
+        <div class="text-center mb-60"><h2 class="section-title">Preguntas Frecuentes</h2></div>
+        <div class="faq-wrapper">
+          <div class="faq-item">
+            <button class="faq-question">¿Cómo funciona el orden de entrega? <i data-lucide="chevron-down" class="faq-icon"></i></button>
+            <div class="faq-answer"><p>El orden se define al momento de la firma del contrato colectivo, siguiendo criterios objetivos de adhesión al grupo.</p></div>
+          </div>
+          <div class="faq-item">
+            <button class="faq-question">¿Es un financiamiento bancario? <i data-lucide="chevron-down" class="faq-icon"></i></button>
+            <div class="faq-answer"><p>No. Es un modelo de adquisición colectiva directa, sin intereses bancarios y sin necesidad de aprobación de crédito tradicional.</p></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="footer bg-navy">
+      <div class="container footer__grid">
+        <div class="footer__col">
+          <a href="#" class="logo mb-24"><img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official brightness-invert"></a>
+          <p class="footer__desc">Plataforma europea estructurada de adquisición colectiva.</p>
+        </div>
+        <div class="footer__col">
+          <h4 class="footer__title">Enlaces</h4>
+          <ul class="footer__links">
+            <li><a href="#como-funciona">Cómo funciona</a></li>
+            <li><a href="mailto:contato@wekota.eu">Contacto</a></li>
+            <li><a href="tel:+34634773958" style="color: var(--white-60); font-size: 0.9rem; display: flex; align-items: center; gap: 8px; margin-top: 12px; text-decoration: none;">
+              <img src="https://flagcdn.com/w20/es.png" srcset="https://flagcdn.com/w40/es.png 2x" width="20" alt="España">
+              +34 634 77 39 58
+            </a></li>
+          </ul>
+        </div>
+        <div class="footer__col">
+          <h4 class="footer__title">Legal</h4>
+          <ul class="footer__links">
+            <li><a href="politica-privacidad.html">Privacidad</a></li>
+            <li><a href="termos-condicoes.html">Términos</a></li>
+          </ul>
+          <p class="footer__copyright">© 2026 WEKOTA. Todos los derechos reservados.</p>
+        </div>
+      </div>
+    </footer>
   </main>
 
-  <footer class="footer bg-navy">
-    <div class="container footer__grid">
-      <div class="footer__col">
-        <a href="#" class="logo mb-24"><img src="images/logo-oficial.png" alt="WEKOTA Logo" class="logo__img-official brightness-invert"></a>
-        <p class="footer__desc">Plataforma europea estructurada de adquisición colectiva.</p>
-      </div>
-      <div class="footer__col">
-        <h4 class="footer__title">Enlaces</h4>
-        <ul class="footer__links">
-          <li><a href="#como-funciona">Cómo funciona</a></li>
-          <li><a href="mailto:contato@wekota.eu">Contacto</a></li>
-          <li><a href="tel:+34634773958" style="color: var(--white-60); font-size: 0.9rem; display: flex; align-items: center; gap: 8px; margin-top: 12px; text-decoration: none;">
-            <img src="https://flagcdn.com/w20/es.png" srcset="https://flagcdn.com/w40/es.png 2x" width="20" alt="España">
-            +34 634 77 39 58
-          </a></li>
-        </ul>
-      </div>
-      <div class="footer__col">
-        <h4 class="footer__title">Legal</h4>
-        <ul class="footer__links">
-          <li><a href="politica-privacidad.html">Privacidad</a></li>
-          <li><a href="termos-condicoes.html">Términos</a></li>
-        </ul>
-        <p class="footer__copyright">© 2026 WEKOTA. Todos los derechos reservados.</p>
-      </div>
-    </div>
-  </footer>
-
-  <a href="https://wa.me/34634773958" target="_blank" class="wa-float-official">
-    <span class="wa-text-official">Hablar por WhatsApp</span>
-    <div class="wa-icon-official">
-      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347m-5.421 7.403h-.004a9.87 9.87 0 01-5.031-1.378l-.361-.214-3.741.982.998-3.648-.235-.374a9.86 9.86 0 01-1.51-5.26c.001-5.45 4.436-9.884 9.888-9.884 2.64 0 5.122 1.03 6.988 2.898a9.825 9.825 0 012.893 6.994c-.003 5.45-4.437 9.884-9.885 9.884m8.413-18.297A11.815 11.815 0 0012.05 0C5.495 0 .16 5.335.157 11.892c0 2.096.547 4.142 1.588 5.945L0 24l6.335-1.662c1.72.94 3.659 1.437 5.634 1.437h.005c6.558 0 11.894-5.335 11.897-11.893a11.821 11.821 0 00-3.48-8.413z"/></svg>
-    </div>
+  <!-- WHATSAPP FLOAT (Restaurado) -->
+  <a href="https://wa.me/34612345678" class="wa-float-official" target="_blank">
+    <div class="wa-icon-official"><i data-lucide="message-circle"></i></div>
+    <span class="wa-text-official">Hablar con Consultor</span>
   </a>
 
+  <script src="/main.js"></script>
   <script>
-    lucide.createIcons();
+    if (window.lucide) window.lucide.createIcons();
+    
+    document.querySelectorAll('.faq-question').forEach(button => {
+      button.addEventListener('click', () => {
+        const item = button.parentElement;
+        item.classList.toggle('active');
+      });
+    });
+
     function startCountdown() {
       const targetDate = new Date();
       targetDate.setDate(targetDate.getDate() + 6);
